--- a/index.html
+++ b/index.html
@@ -1,9 +1,92 @@
-<!doctype html>
-<html>
-  <head>
-    <title>mullerlab test</title>
-  </head>
-  <body>
-    <p></p>
-  </body>
-</html>
+<!DOCTYPE html>
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<title>muller lab</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+html, body, tr, td {
+    font-family: monospace;
+    font-size: 110%;
+    background-color: #262626;
+    color: #EEA47FFF;
+}
+
+article {
+    max-width: 540px;
+    margin: auto;
+}
+
+a:link {
+    color: #EEA47FFF;
+    text-decoration: none;
+}
+
+a:visited {
+    color: #EEA47FFF;
+}
+
+a:active {
+    color: #EEA47FFF;
+}
+
+a:hover {
+    color: #d8d8d8
+}
+
+</style>
+</head><body><article>
+<pre aria-label="muller lab, western university" aria-role="heading" aria-level="1"> 
+<br>
+<a href="http://mullerlab.ca">muller lab</a>
+<a href="http://uwo.ca/apmaths">department of applied mathematics</a>
+<a href="http://uwo.ca">western university</a>
+</pre>
+
+<br>
+we are a lab for computational and theoretical neuroscience at <a href="http://uwo.ca">western university</a> in london, ontario. we develop computational tools and mathematical models to solve problems in sensory processing and memory.<br><br>
+
+<pre>code repositories ------------------------------------------------------</pre>
+
+<p style="text-indent: -40px; margin-left: 60px;">
+<a href="https://github.com/mullerlab/wave-matlab"><b>wave</b></a>: toolbox for analysis and visualization of noisy multisite spatiotemporal data. Originally developed for multichannel recordings in neuroscience, the functions in <b>wave</b> are general and applicable to multisite data in biology, ecology, climatology, and experimental physics. [MATLAB]</p>
+
+<p style="margin-left: 60px;">Published in: <a href="https://www.nature.com/articles/ncomms4675" target="_blank">Muller et al., <i>Nature Communications</i> 5, 2014</a>; <a href="https://elifesciences.org/articles/17267" target="_blank">Muller et al., <i>eLife</i> 5, 2016</a></p>
+
+<p style="text-indent: -40px; margin-left: 60px;">
+<a href="https://github.com/mullerlab/gp-demo"><b>generalized-phase</b></a>: implementation of the "generalized phase" (GP) approach to analysis of wideband signals. the GP represents a comprehensive numerical approach to the original analytical signal framework introduced by Denis Gabor in 1946, correcting technical limitations that appear in the complex representation of non-stationary, non-narrowband signals. [MATLAB]</p>
+
+<p style="margin-left: 60px;">Published in: <a href="https://www.biorxiv.org/content/10.1101/811471v1" target="_blank">Davis<sup>*</sup>, Muller<sup>*</sup> et al., <i>bioRxiv</i>, 2019</a> (<sup>*</sup>equal contribution)</p> 
+
+<br><pre>contact ----------------------------------------------------------------
+
+Lyle Muller: <script type="text/javascript" language="javascript">
+<!--
+// Email obfuscator script 2.1 by Tim Williams, University of Arizona
+// Random encryption key feature coded by Andrew Moulden
+// This code is freeware provided these four comment lines remain intact
+// A wizard to generate this code is at http://www.jottings.com/obfuscator/
+{ coded = "0hk00pXK@kaJ.tx"
+  key = "afe9PtKyiZjUI3mxNprD7Su5FoAYThvEBXV14kRlJG6dWQCwMOg8c20zqnLHsb"
+  shift=coded.length
+  link=""
+  for (i=0; i<coded.length; i++) {
+    if (key.indexOf(coded.charAt(i))==-1) {
+      ltr = coded.charAt(i)
+      link += (ltr)
+    }
+    else {     
+      ltr = (key.indexOf(coded.charAt(i))-shift+key.length) % key.length
+      link += (key.charAt(ltr))
+    }
+  }
+document.write("<a href='mailto:"+link+"'>"+link+"</a>")
+}
+//-->
+</script><noscript>Sorry, you need Javascript on to email me.</noscript></pre>
+
+<br><pre>acknowledgements -------------------------------------------------------</pre>
+
+<p style="margin-left: 40px;">our research work is generously supported by <a href="http://brainscan.uwo.ca">BrainsCAN</a> and an international <a href="http://nxwm.io">NSF NeuroNex award (#2015276)</a></p>
+
+</article>
+
+</body></html>
