--- a/index.html
+++ b/index.html
@@ -29,9 +29,12 @@ a:active {
 }
 
 a:hover {
-    color: #d8d8d8
+    color: #d8d8d8;
 }
 
+sup { 
+	line-height: 0; font-size: 65%; 
+}
 </style>
 </head><body><article>
 <pre aria-label="muller lab, western university" aria-role="heading" aria-level="1"> 
@@ -44,7 +47,7 @@ a:hover {
 <br>
 we are a lab for computational and theoretical neuroscience at <a href="http://uwo.ca">western university</a> in london, ontario. we develop computational tools and mathematical models to solve problems in sensory processing and memory.<br><br>
 
-<pre>code repositories ------------------------------------------------------</pre>
+<pre>code repositories --------------------------------------------</pre>
 
 <p style="text-indent: -40px; margin-left: 60px;">
 <a href="https://github.com/mullerlab/wave-matlab"><b>wave</b></a>: toolbox for analysis and visualization of noisy multisite spatiotemporal data. Originally developed for multichannel recordings in neuroscience, the functions in <b>wave</b> are general and applicable to multisite data in biology, ecology, climatology, and experimental physics. [MATLAB]</p>
@@ -56,7 +59,7 @@ we are a lab for computational and theoretical neuroscience at <a href="http://u
 
 <p style="margin-left: 60px;">Published in: <a href="https://www.biorxiv.org/content/10.1101/811471v1" target="_blank">Davis<sup>*</sup>, Muller<sup>*</sup> et al., <i>bioRxiv</i>, 2019</a> (<sup>*</sup>equal contribution)</p> 
 
-<br><pre>contact ----------------------------------------------------------------
+<br><pre>contact ------------------------------------------------------
 
 Lyle Muller: <script type="text/javascript" language="javascript">
 <!--
@@ -83,7 +86,7 @@ document.write("<a href='mailto:"+link+"'>"+link+"</a>")
 //-->
 </script><noscript>Sorry, you need Javascript on to email me.</noscript></pre>
 
-<br><pre>acknowledgements -------------------------------------------------------</pre>
+<br><pre>acknowledgements ---------------------------------------------</pre>
 
 <p style="margin-left: 40px;">our research work is generously supported by <a href="http://brainscan.uwo.ca">BrainsCAN</a> and an international <a href="http://nxwm.io">NSF NeuroNex award (#2015276)</a></p>
 
