--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ we are a lab for computational and theoretical neuroscience at <a href="http://u
 <p style="text-indent: -40px; margin-left: 60px;">
 <a href="https://github.com/mullerlab/generalized-phase"><b>generalized-phase</b></a>: implementation of the "generalized phase" (GP) approach to analysis of wideband signals. the GP represents a comprehensive numerical approach to the original analytical signal framework introduced by Denis Gabor in 1946, correcting technical limitations that appear in the complex representation of non-stationary, non-narrowband signals. [MATLAB]</p>
 
-<p style="margin-left: 60px;">Published in: <a href="https://www.biorxiv.org/content/10.1101/811471v1" target="_blank">Davis<sup>*</sup>, Muller<sup>*</sup> et al., <i>bioRxiv</i>, 2019</a> (<sup>*</sup>equal contribution)</p> 
+<p style="margin-left: 60px;">Published in: <a href="https://www.biorxiv.org/content/10.1101/811471v1" target="_blank">Davis<sup>*</sup>, Muller<sup>*</sup> et al., <i>Nature</i>, 2020</a> (<sup>*</sup>equal contribution)</p> 
 
 <br><pre>contact ------------------------------------------------------
 
