--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@ we are a lab for computational and theoretical neuroscience at <a href="http://u
 
 <p style="margin-left: 60px;">Published in: <a href="https://www.nature.com/articles/s41586-020-2802-y" target="_blank">Davis<sup>*</sup>, Muller<sup>*</sup> et al., <i>Nature</i> 587, 2020</a> (<sup>*</sup>equal contribution)</p> 
 
+<p style="text-indent: -40px; margin-left: 60px;">
+<a href="https://github.com/mullerlab/NETSIM"><b>NETSIM</b></a>: a fast and efficient simulator for spiking neural networks. Written in C, the focus of this software is to enable large-scale simulations of networks ranging from 100,000 to 1,000,000 neurons with biologically realistic connectivity on platforms ranging from relatively standard high-memory desktop workstations to compute clusters. [C]</p>
+
+<p style="margin-left: 60px;">Published in: <a href="https://www.nature.com/articles/s41467-021-26175-1" target="_blank">Davis<sup>*</sup>, Benigno<sup>*</sup>, Fletterman<sup>*</sup> et al., <i>Nature Communications</i> 12, 2021</a> (<sup>*</sup>equal contribution)</p> 
+
 <br><pre>contact ------------------------------------------------------
 
 Lyle Muller: <script type="text/javascript" language="javascript">
@@ -88,7 +93,7 @@ document.write("<a href='mailto:"+link+"'>"+link+"</a>")
 
 <br><pre>acknowledgements ---------------------------------------------</pre>
 
-<p style="margin-left: 40px;">our research work is generously supported by <a href="http://brainscan.uwo.ca">BrainsCAN</a> and an international <a href="http://nxwm.io">NSF NeuroNex award (#2015276)</a></p>
+<p style="margin-left: 40px;">our research work is generously supported by <a href="http://brainscan.uwo.ca">BrainsCAN</a>, <a href="https://www.computecanada.ca">Compute Canada</a>, and an international <a href="http://nxwm.io">NSF NeuroNex award (#2015276)</a></p>
 
 </article>
 
