--- a/index.html
+++ b/index.html
@@ -62,7 +62,12 @@ we are a lab for computational and theoretical neuroscience at <a href="http://u
 <p style="text-indent: -40px; margin-left: 60px;">
 <a href="https://github.com/mullerlab/NETSIM"><b>NETSIM</b></a>: a fast and efficient simulator for spiking neural networks. Written in C, the focus of this software is to enable large-scale simulations of networks ranging from 100,000 to 1,000,000 neurons with biologically realistic connectivity on platforms ranging from relatively standard high-memory desktop workstations to compute clusters. [C]</p>
 
-<p style="margin-left: 60px;">Published in: <a href="https://www.nature.com/articles/s41467-021-26175-1" target="_blank">Davis<sup>*</sup>, Benigno<sup>*</sup>, Fletterman<sup>*</sup> et al., <i>Nature Communications</i> 12, 2021</a> (<sup>*</sup>equal contribution)</p> 
+<p style="margin-left: 60px;">Published in: <a href="https://www.nature.com/articles/s41467-021-26175-1" target="_blank">Davis<sup>*</sup>, Benigno<sup>*</sup>, Fletterman<sup>*</sup> et al., <i>Nature Communications</i> 12, 2021</a> (<sup>*</sup>equal contribution)</p>
+
+<p style="text-indent: -40px; margin-left: 60px;">
+<a href="https://github.com/mullerlab/complex-kuramoto"><b>complex-kuramoto</b></a>: implementation of the complex-valued approach to the Kuramoto model. this approach introduces a complex-valued system, closely related to the formulation of the original, nonlinear Kuramoto model defined in the reals. the advantage of this approach is to provide a direct connection between the spectrum of the adjacency matrix and the resulting nonlinear dynamics. [MATLAB]</p>
+
+<p style="margin-left: 60px;">Published in: <a href="https://www.nature.com/articles/s41467-021-26175-1" target="_blank">Budzinski<sup>*</sup>, Nguyen<sup>*</sup>, et al., <i>Chaos</i> 32, 2022</a> (<sup>*</sup>equal contribution)</p> 
 
 <br><pre>contact ------------------------------------------------------
 
@@ -93,7 +98,7 @@ document.write("<a href='mailto:"+link+"'>"+link+"</a>")
 
 <br><pre>acknowledgements ---------------------------------------------</pre>
 
-<p style="margin-left: 40px;">our research work is generously supported by <a href="http://brainscan.uwo.ca">BrainsCAN</a>, <a href="https://www.computecanada.ca">Compute Canada</a>, and an international <a href="http://nxwm.io">NSF NeuroNex award (#2015276)</a></p>
+<p style="margin-left: 40px;">our research work is generously supported by the <a href="https://uwo.ca/academy/index.html">Western Academy for Advanced Research</a>, <a href="http://brainscan.uwo.ca">BrainsCAN</a>, <a href="https://www.computecanada.ca">Compute Canada</a>, and an international <a href="http://nxwm.io">NSF NeuroNex award (#2015276)</a></p>
 
 </article>
 
