--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ we are a lab for computational and theoretical neuroscience at <a href="http://u
 <p style="text-indent: -40px; margin-left: 60px;">
 <a href="https://github.com/mullerlab/complex-kuramoto"><b>complex-kuramoto</b></a>: implementation of the complex-valued approach to the Kuramoto model. this approach introduces a complex-valued system, closely related to the formulation of the original, nonlinear Kuramoto model defined in the reals. the advantage of this approach is to provide a direct connection between the spectrum of the adjacency matrix and the resulting nonlinear dynamics. [MATLAB]</p>
 
-<p style="margin-left: 60px;">Published in: <a href="https://www.nature.com/articles/s41467-021-26175-1" target="_blank">Budzinski<sup>*</sup>, Nguyen<sup>*</sup>, et al., <i>Chaos</i> 32, 2022</a> (<sup>*</sup>equal contribution)</p> 
+<p style="margin-left: 60px;">Published in: <a href="https://aip.scitation.org/doi/10.1063/5.0078791" target="_blank">Budzinski<sup>*</sup>, Nguyen<sup>*</sup>, et al., <i>Chaos</i> 32, 2022</a> (<sup>*</sup>equal contribution)</p> 
 
 <br><pre>contact ------------------------------------------------------
 
