--- a/index.html
+++ b/index.html
@@ -67,7 +67,12 @@ we are a lab for computational and theoretical neuroscience at <a href="http://u
 <p style="text-indent: -40px; margin-left: 60px;">
 <a href="https://github.com/mullerlab/complex-kuramoto"><b>complex-kuramoto</b></a>: implementation of the complex-valued approach to the Kuramoto model. this approach introduces a complex-valued system, closely related to the formulation of the original, nonlinear Kuramoto model defined in the reals. the advantage of this approach is to provide a direct connection between the spectrum of the adjacency matrix and the resulting nonlinear dynamics. [MATLAB]</p>
 
-<p style="margin-left: 60px;">Published in: <a href="https://aip.scitation.org/doi/10.1063/5.0078791" target="_blank">Budzinski<sup>*</sup>, Nguyen<sup>*</sup>, et al., <i>Chaos</i> 32, 2022</a> (<sup>*</sup>equal contribution)</p> 
+<p style="margin-left: 60px;">Published in: <a href="https://aip.scitation.org/doi/10.1063/5.0078791" target="_blank">Budzinski<sup>*</sup>, Nguyen<sup>*</sup>, et al., <i>Chaos</i> 32, 2022</a> (<sup>*</sup>equal contribution)</p>
+
+<p style="text-indent: -40px; margin-left: 60px;">
+<a href="https://github.com/mullerlab/liboniEA2025image"><b>cv-RNN image segmentation</b></a>: implementation of image segmentation through spatiotemporal dynamics in a complex-valued recurrent neural network. an image input to the system, in combination with recurrent connectivity, generates traveling waves that allow segmentation of images ranging from simple geometric objects to naturalistic scenes. [MATLAB]</p>
+
+<p style="margin-left: 60px;">Published in: <a href="https://www.pnas.org/doi/10.1073/pnas.2321319121" target="_blank">Liboni<sup>*</sup>, Budzinski<sup>*</sup>, Busch<sup>*</sup>, et al., <i>PNAS</i> 122, 2025</a> (<sup>*</sup>equal contribution)</p> 
 
 <br><pre>contact ------------------------------------------------------
 
@@ -98,7 +103,7 @@ document.write("<a href='mailto:"+link+"'>"+link+"</a>")
 
 <br><pre>acknowledgements ---------------------------------------------</pre>
 
-<p style="margin-left: 40px;">our research work is generously supported by the <a href="https://uwo.ca/academy/index.html">Western Academy for Advanced Research</a>, <a href="http://brainscan.uwo.ca">BrainsCAN</a>, <a href="https://www.computecanada.ca">Compute Canada</a>, and an international <a href="http://nxwm.io">NSF NeuroNex award (#2015276)</a></p>
+<p style="margin-left: 40px;">our research work is generously supported by the <a href="https://uwo.ca/academy/index.html">Western Academy for Advanced Research</a>, <a href="http://brainscan.uwo.ca">BrainsCAN</a>, <a href="https://www.computecanada.ca">Compute Canada</a>, <a href="http://nxwm.io">NSF (NeuroNex award #2015276)</a>, and NIH (U01-NS131914 and R01-EY028723).</p>
 
 </article>
 
